Avalara Fullqa/src/Geopointe/objects/GP_Default_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Geopointe_Object_Mapping__c</fullName>
        <label>Geopointe Object Mapping</label>
        <referenceTo>GP_Object_Mapping__c</referenceTo>
        <relationshipLabel>Geopointe Default Mappings</relationshipLabel>
        <relationshipName>Geopointe_Default_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sfdc_Field__c</fullName>
        <label>Sfdc Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Default Mapping</label>
    <nameField>
        <label>Geopointe Default Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Default Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>